--- a/package.json
+++ b/package.json
@@ -31,10 +31,24 @@
     "koffi": "^2.9.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.0.0",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.22",
+    "clsx": "^2.1.1",
     "electron": "^33.0.0",
     "electron-builder": "^26.0.12",
     "electron-vite": "^2.3.0",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.557.0",
+    "postcss": "^8.5.6",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
+    "tailwindcss-cli": "^0.1.2",
     "typescript": "^5.0.0",
     "vite": "^5.0.0"
   }
