--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koffi": "^2.9.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.8",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.0.0",
     "@types/react": "^19.2.7",
@@ -50,6 +51,7 @@
     "tailwindcss": "^4.1.17",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^5.0.0",
+    "ultracite": "^6.3.10",
     "vite": "^5.0.0"
   }
 }
