--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "build:win": "npm run build && electron-builder --win --x64",
-    "preview": "electron-vite preview"
+    "preview": "electron-vite preview",
+    "lint": "ultracite lint",
+    "format": "ultracite format",
+    "ultracite:fix": "npx ultracite fix",
+    "ultracite:check": "npx ultracite check",
+    "ultracite:doctor": "npx ultracite doctor"
   },
   "build": {
     "appId": "com.yossuli.keyremapper",
