--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,7 +32,5 @@
     "source.fixAll.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
-  "cSpell.words": [
-    "Remapper"
-  ]
+  "cSpell.words": ["Remapper"]
 }
