--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
     "koffi": "^2.9.2"
   },
   "devDependencies": {
