--- a/package.json
+++ b/package.json
@@ -35,8 +35,12 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "koffi": "^2.9.2"
   },
@@ -59,6 +63,7 @@
     "react-dom": "^19.2.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-cli": "^0.1.2",
     "typescript": "^5.0.0",
     "ultracite": "^6.3.10",
