--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ultracite:fix": "npx ultracite fix",
     "ultracite:check": "npx ultracite check",
     "ultracite:doctor": "npx ultracite doctor",
+    "ui:add": "npx shadcn@latest add",
     "reset:config": "powershell -Command \"Remove-Item -Path $env:APPDATA/my-key-remapper/key-mapping-config*.json -ErrorAction SilentlyContinue\""
   },
   "build": {
@@ -37,6 +38,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
