feat(macro): マクロ機能の新規実装および関連コンポーネントのリファクタリング 【機能追加】 - マクロの作成、編集、削除、複製機能の UI およびロジックを実装 - マクロ実行エンジン（MacroExecutor）をメインプロセスに追加 - マクロ用のシークエンスエディタおよびステップエディタを構築 - 各種設定の保存および永続化処理を更新 【リファクタリング】 - objectiveSwitch ユーティリティを shared ディレクトリに移動し、メインプロセスからも利用可能に - アクション実行ロジック（actionExecutor）をリファクタリングし、拡張性を向上

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "strictNullChecks": true,
     "jsx": "react-jsx",
     "paths": {
-      "@/*": ["./src/renderer/src/*"]
+      "@/*": ["./src/renderer/src/*"],
+      "@shared/*": ["./src/shared/*"]
     }
   },
   "include": ["src/**/*"]
