refactor: SequenceEditorの分割とDataGridの強化
- SequenceEditor を ActionItem, ListCellButton, RichText に分割・再配置
- ActionSummary を ActionItem に統合
- DataGrid に Mapped パターン適用と型安全性強化
- 関連コンポーネントのリファクタリングと型定義修正
- package.json の lint コマンド修正

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "electron-vite build",
     "build:win": "npm run build && electron-builder --win --x64",
     "preview": "electron-vite preview",
-    "lint": "ultracite lint",
+    "lint": "ultracite check",
     "format": "ultracite format",
     "typecheck": "tsc --noEmit",
     "ultracite:fix": "npx ultracite fix",
